--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,11 @@ body {
     background-color: var(--quat);
 }
 
+.p-gradient {
+    background-image: linear-gradient(white, black);
+    z-index: 1;
+}
+
 /* font colors */
 
 .fnt-prim {
@@ -94,6 +99,10 @@ nav .nav-link {
 .card-link {
     background-color: var(--tert);
     color: var(--quat);
+}
+
+.card-body p {
+    max-height: 1.5em;
 }
 
 .happy-taco {
