--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taco Bout It</title>
 
-    <!-- bootsrap -->
+    {{!-- <!-- bootsrap --> --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
-    <!-- custom styling -->
-    <link rel="stylesheet" href="./css/style.css">
+    {{!-- <!-- custom styling --> --}}
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
-    <!-- Navbar -->
+    {{!-- <!-- Navbar --> --}}
     <header class="navbar justify-content-center justify-content-md-between align-items-center">
         
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -48,33 +47,11 @@
     </header>
 
     <main class="container container-fluid">
-        <!-- Articles -->
-        <div class="card my-2">
-            <div class="card-body">
-                <h4 class="card-title py-1 pl-1 rounded">Blogpost Title</h4>
-                <h6 class="text-right mr-3">by Author</h6>
-                <p class="card-text overflow-hidden mx-1">Text from the article.</p>
-                <a class="card-link float-right mr-2 py-1 px-2 rounded" href="#">Read More</a>
-            </div>
-        </div>
-
-        <div class="card my-2">
-            <div class="card-body">
-                <h4 class="card-title py-1 pl-1 rounded">Blogpost Title</h4>
-                <p class="card-text overflow-hidden mx-1">Text from the article.</p>
-                <a class="card-link float-right mr-2 py-1 px-2 rounded" href="#">Read More</a>
-            </div>
-        </div>
-
-        <div class="card my-2">
-            <div class="card-body">
-                <h4 class="card-title py-1 pl-1 rounded">Blogpost Title</h4>
-                <p class="card-text overflow-hidden mx-1">Text from the article.</p>
-                <a class="card-link float-right mr-2 py-1 px-2 rounded" href="#">Read More</a>
-            </div>
-        </div> 
-
+       
+        {{{ body }}}
     </main>
 
 </body>
+
+{{!-- add script later --}}
 </html>
