--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,29 +18,29 @@
     <header class="navbar justify-content-center justify-content-md-between align-items-center">
         
         <div class="d-flex flex-row justify-content-center align-items-center">
-            <img src="./images/Happy Taco.png" alt="a happy taco" class="happy-taco mr-3">
+            <img src="/images/Happy Taco.png" alt="a happy taco" class="happy-taco mr-3">
             <h1>Taco Bout It</h1>
         </div>
         
         <nav class="d-flex flew-row justify-content-end my-2">
             <ul class="nav">
                 <li class="nav-item mx-1">
-                    <a class="nav-link rnd py-1 px-2" href="#">Home</a>
+                    <a class="nav-link rnd py-1 px-2" href="/">Home</a>
                 </li>
             </ul>
             <ul class="nav">
                 <li class="nav-item mx-1">
-                    <a class="nav-link rnd py-1 px-2" href="#">Dashboard</a>
+                    <a class="nav-link rnd py-1 px-2" href="/dashboard">Dashboard</a>
                 </li>
             </ul>
             <ul class="nav mx-1">
                 <li class="nav-item">
-                    <a class="nav-link rnd py-1 px-2" href="#">Login</a>
+                    <a class="nav-link rnd py-1 px-2" href="/login">Login</a>
                 </li>
             </ul>
             <ul class="nav mx-1">
                 <li class="nav-item">
-                    <a class="nav-link rnd py-1 px-2" href="#">Logout</a>
+                    <button id="logout-button" class="bg-sec fnt-quat rnd py-1 px-2">Logout</button>
                 </li>
             </ul>
         </nav>
