--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
         <h4 class="card-title py-1 pl-1 rounded">{{blogpost.title}}</h4>
         <h6 class="text-right mr-3">by {{blogpost.user.name}}</h6>
         <p class="card-text overflow-hidden mx-1">{{blogpost.content}}</p>
-        <a class="card-link float-right mr-2 py-1 px-2 rounded" href=`/api/blogpost/{{blogpost.id}}`>Read More</a>
+        <a class="card-link float-right mr-2 py-1 px-2 rounded" href="/blogpost/{{blogpost.id}}">Read More</a>
     </div>
 </div>
 {{/each}}
