Added login.js file and login form function

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 
     <h3 class="text-center">Login</h3>
 
-    <form class="form">
+    <form id="login-form" class="form">
         
         {{!-- Email --}}
         <div class="form-group">
@@ -15,7 +15,7 @@
             <label for="login-password">Password:</label>
             <input type="password" id="login-password" class="form-control">
         </div>
-        
+
         <button id="submit-button" type="submit" class="btn btn-block sub-btn mt-4">Submit</button>
     </form>
     <p class="mt-2 pb-2">Don't have an account? <a href="/signup">Sign-up</a></p>
