Added logic to logout and sign up js and fixed some routes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,4 +21,4 @@
     <p class="mt-2 pb-2">Don't have an account? <a href="/signup">Sign-up</a></p>
 </div>
 
-<script src="/public/js/login.js"
+<script src="./js/login.js"></script>
