--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,51 +8,53 @@
     <title>Taco Bout It</title>
 
     {{!-- <!-- bootsrap --> --}}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     {{!-- <!-- custom styling --> --}}
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
+
 <body>
     {{!-- <!-- Navbar --> --}}
     <header class="navbar justify-content-center justify-content-md-between align-items-center">
-        
+
         <div class="d-flex flex-row justify-content-center align-items-center">
             <img src="/images/Happy Taco.png" alt="a happy taco" class="happy-taco mr-3">
             <h1>Taco Bout It</h1>
         </div>
-        
+
         <nav class="d-flex flew-row justify-content-end my-2">
             <ul class="nav">
                 <li class="nav-item mx-1">
                     <a class="nav-link rnd py-1 px-2" href="/">Home</a>
                 </li>
-            </ul>
-            <ul class="nav">
                 <li class="nav-item mx-1">
                     <a class="nav-link rnd py-1 px-2" href="/dashboard">Dashboard</a>
                 </li>
-            </ul>
-            <ul class="nav mx-1">
-                <li class="nav-item">
-                    <a class="nav-link rnd py-1 px-2" href="/login">Login</a>
-                </li>
-            </ul>
-            <ul class="nav mx-1">
-                <li class="nav-item">
+                {{#if logged_in}}
+                <li class="nav-item mx-1">
                     <button id="logout-button" class="bg-sec fnt-quat rnd py-1 px-2">Logout</button>
                 </li>
+                {{else}}
+                <li class="nav-item mx-1">
+                    <a class="nav-link rnd py-1 px-2" href="/login">Login</a>
+                </li>
+                {{/if}}
             </ul>
         </nav>
     </header>
 
     <main class="container container-fluid">
-       
+
         {{{ body }}}
     </main>
 
 </body>
 
-{{!-- add script later --}}
+{{#if logged_in}}
+<script src="/js/logout.js"></script>
+{{/if}}
+
 </html>
