--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,3 +19,5 @@
     </form>
     <p class="mt-2 pb-2">Already have an account? <a href="/login">Login</a></p>
 </div>
+
+<script src="./js/signup.js"></script>
