Added delete post button manager for front end

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -15,6 +15,6 @@
         </div>
 
         <button id="update-button" type="submit" class="btn btn-block sub-btn mt-4">Update</button>
-        <button id="delete-button" type="button" class="btn btn-block sub-btn mb-1 fnt-quat">Delete</button>
+        <button id="delete-button" type="button" class="btn btn-block sub-btn mb-1 fnt-quat" data-id="{{id}}">Delete</button>
     </form>
 </div>
