Fixed issues with updating and deleting posts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
 <ul class="blog-links my-3">
     {{#each blogposts as |blogpost|}}
     <li>
-        <a href="/editpost/{{blogpost.id}}" class="blog-link d-block bg-prim fnt-quat px-3 py-2 my-2 rnd">{{blogpost.title}}</a>
+        <a href="/updatepost/{{blogpost.id}}" class="blog-link d-block bg-prim fnt-quat px-3 py-2 my-2 rnd">{{blogpost.title}}</a>
     </li>
     {{/each}}
 </ul>
