--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -14,7 +14,9 @@
             <textarea id="content" class="form-control" rows="16">{{content}}</textarea>
         </div>
 
-        <button id="update-button" type="submit" class="btn btn-block sub-btn mt-4">Update</button>
+        <button id="update-button" type="submit" class="btn btn-block sub-btn mt-4" data-id="{{id}}">Update</button>
         <button id="delete-button" type="button" class="btn btn-block sub-btn mb-1 fnt-quat" data-id="{{id}}">Delete</button>
     </form>
 </div>
+
+<script src="/js/updatepost.js"></script>
