--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -17,3 +17,5 @@
         <button id="submit-button" type="submit" class="btn btn-block sub-btn mt-4">Submit</button>
     </form>
 </div>
+
+<script src="./js/newpost.js"></script>
