--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,4 +1,4 @@
-<article class="bg-light">
+<article class="bg-light rounded">
     <p class="mx-3 mb-1 pt-2">{{content}}</p>
     <p class="mx-3 mt-1 pb-2 text-right">-{{user.name}}</p>
 
