--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,15 +72,6 @@ body {
     color: var(--quat);
 }
 
-/* headers */
-header {
-    background-color: var(--prim);
-}
-
-h1 {
-    color: var(--quat);
-}
-
 h1, h2, h3, h4 {
     font-family: 'Barlow Condensed', sans-serif;
 }
@@ -89,20 +80,9 @@ h1, h2, h3, h4 {
     border: none;
 }
 
-.card-title {
-    background-color: var(--quat);
-}
-
 /* links */
 nav .nav-link {
     font-family: 'Montserrat', sans-serif;
-    background-color: var(--sec);
-    color: var(--quat);
-}
-
-.card-link {
-    background-color: var(--tert);
-    color: var(--quat);
 }
 
 .card-body p {
@@ -117,6 +97,10 @@ nav .nav-link {
 .form-wrapper {
     background-color: var(--prim);
     color: var(--quat);
+}
+
+.pass-cap {
+    font-size: .9em;
 }
 
 .sub-btn {
@@ -173,4 +157,3 @@ nav .nav-link:active,
     color: var(--quat);
     background-color: #363333ce;
 }
-
