Refactored routes and handlebars for dates

--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -2,6 +2,7 @@
     {{!-- <!-- title --> --}}
     <h2 class="text-center bg-quat mx-2 py-1">{{title}}</h2>
     <h6 class="text-right mr-3">by {{user.name}}</h6>
+    <h6 class="text-right mr-3">Posted: {{date}}</h6>
 
     {{!-- <!-- content --> --}}
     <p class="mx-3 mt-4">{{content}}</p>
