--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,5 +1,5 @@
 <article class="bg-light rounded">
     <p class="mx-3 mb-1 pt-2">{{content}}</p>
-    <p class="mx-3 mt-1 pb-2 text-right">-{{user.name}} {{date}}</p>
+    <p class="mx-3 mt-1 pb-2 text-right">-{{user.name}} ({{date}})</p>
 
 </article>
