--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,11 +1,12 @@
-<section class="blog-article bg-light my-3 py-1 rounded">
+<section class="blog-article bg-light my-3 py-2 rounded">
     {{!-- <!-- title --> --}}
     <h2 class="text-center bg-quat mx-2 py-1">{{title}}</h2>
     <h6 class="text-right mr-3">by {{user.name}}</h6>
-    <h6 class="text-right mr-3">Posted: {{date}}</h6>
 
     {{!-- <!-- content --> --}}
     <p class="mx-3 mt-4">{{content}}</p>
+
+    <p class="text-right mr-3 mb-1"><i>Posted on {{date}}</i></p>
 </section>
 
 {{!-- <!-- Comments --> --}}
